<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mystery Box</string>
    <string name="menu_settings">Settings</string>
    <string name="ioio_status">IOIO Status</string>
    <string name="phone_status">Phone Status</string>
    <string name="connection">Connection</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="gps">GPS</string>
    <string name="battery">Battery</string>
    <string name="attempts">Attempts</string>
    <string name="lock">Lock Status</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="solved">Solved</string>
	<string name="connected">Connected</string>
	<string name="disconnected">Disconnected</string>
	<string name="busy">Busy</string>
    <string name="searching">Searching</string>
    <string name="unavailable">Unavailable</string>
    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="mock_locations_disallowed">Mock locations disallowed</string>
    <string name="prompt_disable_mock_locations">Please disable mock locations in Development Settings.</string>
    <string name="gps_disabled">GPS is disabled</string>
    <string name="gps_enable_prompt">Would you like to enable GPS?</string>
    <string name="bt_disabled">Bluetooth is disabled</string>
    <string name="bt_enable_prompt">Would you like to enable Bluetooth?</string>
    <string name="empty"></string>
    <string name="attempt_unlock">Attempt Unlock</string>
    <string name="out_of_attempts">Out of attempts</string>
    <string name="locked_forever">The box has been locked forever!</string>
    <string name="ioio_not_found">Ensure that the box is switched on, Bluetooth is enabled and that your phone is paired with device name IOIO using passkey 4545.</string>
    <string name="ioio_not_found_title">Unable to communicate with box</string>
    <string name="menu_update">Update</string>
    <string name="update_data_prompt">Enter data here</string>
    <string name="menu_program">Program</string>
    <string name="menu_contact">Contact developer</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="attempts_used">Attempts used</string>
    <string name="total_attempts">Total attempts</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius">Radius (meters)</string>
    <string name="reset_pin">Reset pin</string>
    <string name="reset_to_original">Reset to original</string>
    <string name="flash_to_box">Flash to box</string>
    <string name="save_flash_data">Save to clipboard</string>
    <string name="programming_menu">Programming menu</string>
    <string name="enter_passcode">Enter passcode</string>
    <string name="incorrect_passcode">Incorrect passcode</string>
    <string name="encrypt_failure">Encryption failed</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="bad_update_data">Bad update data, try again</string>
    <string name="converting_data">Converting data</string>
    <string name="please_wait">Please wait</string>
    <string name="serial">Serial (64-bit)</string>
    <string name="target_serial">Target Serial (64-bit)</string>
    <string name="salt">Salt</string>
    <string name="delete">Delete</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dialog_help">I\'m an evil person, so I\'ll leave you to figure out what to do. >:D I\'m sure you can figure it out though, you\'re smart enough!\nJust to note: you need to pair the box to this phone using Bluetooth (device name IOIO, passcode 4545) and have GPS enabled. Also, if there are any bugs, please report them!</string>
</resources>