<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_margin="40dip">

    <TextView
        android:id="@+id/programming_menu_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/programming_menu"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:id="@+id/programming_row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:gravity="center"
        android:layout_below="@id/programming_menu_text" >

        <CheckBox
            android:id="@+id/checkBox_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/solved" />

        <CheckBox
            android:id="@+id/checkBox_unlocked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/unlocked" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/programming_row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:gravity="center_vertical"
        android:layout_below="@id/programming_row_1" >

        <EditText
            android:id="@+id/field_attempts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/attempts_used"
            android:inputType="number" >

        </EditText>

        <EditText
            android:id="@+id/field_max_attempts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/total_attempts"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/programming_row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:gravity="center_vertical"
        android:layout_below="@id/programming_row_2" >

        <EditText
            android:id="@+id/field_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/latitude"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/field_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/longitude"
            android:inputType="numberDecimal|numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/programming_row_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:gravity="center_vertical"
        android:layout_below="@id/programming_row_3" >

        <EditText
            android:id="@+id/field_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/radius"
            android:inputType="number" />

        <EditText
            android:id="@+id/field_reset_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:hint="@string/reset_pin"
            android:inputType="number"
            android:focusable="false" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/programming_row_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:gravity="center_vertical"
        android:layout_below="@id/programming_row_4" >

        <EditText
            android:id="@+id/field_serial"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:ems="10"
            android:hint="@string/serial"
            android:inputType="number" > </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/programming_row_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="150"
        android:orientation="vertical"
        android:layout_below="@id/programming_row_5" >

        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/reset_to_original" />

        <Button
            android:id="@+id/button_flash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/flash_to_box"/>
    <Button
        android:id="@+id/button_save_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:text="@string/save_flash_data" />
    </LinearLayout>

</RelativeLayout>